# fleaflicker-live-dashboard

./: README.md  fleaflicker_dashboard.py  fleaflicker_league_dashboard.py  fleaflicker_tui.py  pyproject.toml  requirements.txt
fleaflicker_dashboard/: __init__.py  __main__.py  api.py  cli.py  dashboard.py  models.py  tables.py  tui.py  web.py
